--- a/Main/Index.html
+++ b/Main/Index.html
@@ -2,16 +2,18 @@
 <html>
     <head>
         <meta charset='utf-8'/>
+        <meta name="viewport" content="width=device-width", initial-scale="1.0"/>
         <title>Reminder Website ;)</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <div class='menuBtn'>
-            <div class='burgerMenuBtn'></div>
-        </div>
-        <nav>
-            <h1>Help@Home</h1>
-        </nav>
+        <header class="header">
+            <div class="menuBtn">
+                <div class="burgerMenuBtn"></div>
+            </div>
+            <a href="#" class="logo">Help@Home</a>
+        </header>
+        <section></section>
     </body>
     <script src="main.js"></script>
 </html>
