--- a/Main/Index.html
+++ b/Main/Index.html
@@ -7,12 +7,19 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <header class="header">
-            <div class="menuBtn">
-                <div class="burgerMenuBtn"></div>
-            </div>
-            <a href="#" class="logo">Help@Home</a>
-        </header>
+        <nav>
+            <ul>
+                <li>
+                    <div class="menuBtn">
+                        <div class="burgerMenuBtn"></div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#" class="logo">Help@Home</a>
+                </li>
+            </ul>
+        </nav>
+
     </body>
     <script src="main.js"></script>
 </html>
