--- a/Main/Index.html
+++ b/Main/Index.html
@@ -8,16 +8,12 @@
     </head>
     <body>
         <nav>
-            <ul>
-                <li>
-                    <div class="menuBtn">
-                        <div class="burgerMenuBtn"></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#" class="logo">Help@Home</a>
-                </li>
-            </ul>
+            <div class="container">
+                <div class="menuBtn">
+                    <div class="burgerMenuBtn"></div>
+                 </div>
+                 <a href="#" class="logo">Help@Home</a>
+            </div>
         </nav>
 
     </body>
