--- a/Main/Index.html
+++ b/Main/Index.html
@@ -7,13 +7,18 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <nav>
+        <nav class="topbar">
             <div class="container">
                 <div class="menuBtn">
                     <div class="burgerMenuBtn"></div>
                  </div>
                  <a href="#" class="logo">Help@Home</a>
             </div>
+        </nav>
+        <nav class="sidebar">
+            <a href="#">Home</a>
+            <a href="#">About us</a>
+            <a class="Login" href="#">Log In</a>
         </nav>
 
     </body>
