--- a/Index.html
+++ b/Index.html
@@ -24,9 +24,7 @@
                     <li>
                         <a href="#">About us</a>
                     </li>
-                    <li>
-                        <a class="Login" href="#">Log In</a>
-                    </li>
+                    <a class="login" href="#">Log In</a>
                 </ul>
             </div>  
         </div>
