--- a/Data.html
+++ b/Data.html
@@ -28,18 +28,15 @@
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
-        <div class="signin">
-            <form>
-                Sign in to acccess your account
-                <br>
-                <br>
-                <label for="name">Account Name:</label>
-                <input type="text" id="name" name="name"><br><br>
-                <label for="password">Account Password:</label>
-                <input type="text" id="password" name="password"><br><br>
-                <input type="submit" value="Submit">
-            </form>
-        </div>
+        <br><br><br><br><br>
+        <table id='reminder-table'>
+            <tr>
+                <th>Reminders</th>
+            </tr>
+        </table>
     </body>
     <script src="main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase.js"></script>
+    <script src="tabulatedFetch.js"></script>
 </html>
+
