--- a/Login.html
+++ b/Login.html
@@ -29,15 +29,15 @@
             </div>  
         </div>
         <div class="signin">
-            <form>
-                Sign in to acccess your account
+            <form id="login-form">
+                Sign in to access your account
                 <br>
                 <br>
                 <label for="name">Account Name:</label>
-                <input type="text" id="name" name="name"><br><br>
+                <input type="text" id="username-field" name="username" class="login-form-field" placeholder="Username"><br><br>
                 <label for="password">Account Password:</label>
-                <input type="text" id="password" name="password"><br><br>
-                <input type="submit" value="Submit">
+                <input type="password" id="password-field" name="password" class="login-form-field" placeholder="Password"><br><br>
+                <input type="submit" value="Login" id="login-form-submit">
             </form>
         </div>
     </body>
