--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,9 @@
                         <a href="Index.html">Home</a>
                     </li>
                     <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
                         <a href="#">About us</a>
                     </li>
                 </ul>
@@ -31,6 +34,11 @@
         <div class="product">
             Introducing our new Help@Home product: the reminder ecosystem
         </div>
+        <footer>
+            <div class="contents">
+                
+            </div>
+        </footer>
     </body>
     <script src="main.js"></script>
 </html>
