--- a/Index.html
+++ b/Index.html
@@ -32,13 +32,32 @@
             </div>  
         </div>
         <div class="product">
-            Introducing our new Help@Home product: the reminder ecosystem
+            <h1>Help@Home Reminders</h1><br>
+            <p>Introducing our newest ecosystem in the 
+                Help@Home product range</p>
+            <p>Help@Home Reminders</p>
+            <p>Check it out at our product page now!</p><br>
+                <li>
+                    <img src="/icons/audio.png">
+                    <p>Powerful Listening Device listens for your 
+                        reminders that you want to remember Just tap 
+                        the button and help@Home Reminder device will 
+                        begin recording </p>
+                </li>
+                <li>
+                    <img src="/icons/connect.png">
+                </li>
+                <li>
+                    <img src="/icons/energy.png">
+                </li>
+                <li>
+                    <img src="/icons/secure.png">
+                </li>
+                <li>
+                    <img src="/icons/tick.png">
+                </li>
+            </ul>
         </div>
-        <footer>
-            <div class="contents">
-                
-            </div>
-        </footer>
     </body>
     <script src="main.js"></script>
 </html>
