--- a/Index.html
+++ b/Index.html
@@ -42,20 +42,31 @@
                     <p>Powerful Listening Device listens for your 
                         reminders that you want to remember Just tap 
                         the button and help@Home Reminder device will 
-                        begin recording </p>
-                </li>
+                        begin recording. </p>
+                </li><br>
                 <li>
                     <img src="/icons/connect.png">
-                </li>
+                    <p>Your voice notes are converted to text using 
+                        our smart AI Technology. This text is then 
+                        wirelessly and automatically sent to our servers. </p>
+                </li><br>
                 <li>
                     <img src="/icons/energy.png">
-                </li>
+                    <p></p>
+                </li><br>
                 <li>
                     <img src="/icons/secure.png">
-                </li>
+                    <p>Your notes are kept safe and encrypted on
+                        our secure servers. On top of this, unlike
+                        other smart assistance, our product will only
+                        record audio when you press the record button. </p>
+                </li><br>
                 <li>
                     <img src="/icons/tick.png">
-                </li>
+                    <p>The Help@Home Reminder system isa quick and
+                        simple to setup and install making it perfect 
+                        for people of all demographics. </p>
+                </li><br>
             </ul>
         </div>
     </body>
