--- a/Login.html
+++ b/Login.html
@@ -37,7 +37,7 @@
                 <input type="text" id="username-field" name="username" class="login-form-field" placeholder="Username"><br><br>
                 <label for="password">Account Password:</label>
                 <input type="password" id="password-field" name="password" class="login-form-field" placeholder="Password"><br><br>
-                <input type="submit" value="Login" id="login-form-submit">
+                <input type="submit" value="Log In" id="login-form-submit">
             </form>
         </div>
     </body>
