--- a/Data.html
+++ b/Data.html
@@ -22,18 +22,24 @@
                         <a href="Index.html">Home</a>
                     </li>
                     <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
                         <a href="#">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
+        <div class="dim">
+            <table id='reminder-table'>
+                <tr>
+                    <th>Reminders</th>
+                </tr>
+            </table>
+        </div>
         <br><br><br><br><br>
-        <table id='reminder-table'>
-            <tr>
-                <th>Reminders</th>
-            </tr>
-        </table>
+ 
     </body>
     <script src="main.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase.js"></script>
