--- a/Index.html
+++ b/Index.html
@@ -31,43 +31,47 @@
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
-        <div class="product">
-            <h1>Help@Home Reminders</h1><br>
-            <p>Introducing our newest ecosystem in the 
-                Help@Home product range</p>
-            <p>Help@Home Reminders</p>
-            <p>Check it out at our product page now!</p><br>
-                <li>
-                    <img src="/icons/audio.png">
-                    <p>Powerful Listening Device listens for your 
-                        reminders that you want to remember Just tap 
-                        the button and help@Home Reminder device will 
-                        begin recording. </p>
-                </li><br>
-                <li>
-                    <img src="/icons/connect.png">
-                    <p>Your voice notes are converted to text using 
-                        our smart AI Technology. This text is then 
-                        wirelessly and automatically sent to our servers. </p>
-                </li><br>
-                <li>
-                    <img src="/icons/energy.png">
-                    <p></p>
-                </li><br>
-                <li>
-                    <img src="/icons/secure.png">
-                    <p>Your notes are kept safe and encrypted on
-                        our secure servers. On top of this, unlike
-                        other smart assistance, our product will only
-                        record audio when you press the record button. </p>
-                </li><br>
-                <li>
-                    <img src="/icons/tick.png">
-                    <p>The Help@Home Reminder system isa quick and
-                        simple to setup and install making it perfect 
-                        for people of all demographics. </p>
-                </li><br>
-            </ul>
+        <div class="dim">
+            <div class="product">
+                <h1>Help@Home Reminders</h1><br>
+                <p>Introducing our newest ecosystem in the 
+                    Help@Home product range</p>
+                <p>Help@Home Reminders</p>
+                <p>Check it out at our product page now!</p><br>
+                    <li>
+                        <img src="/icons/audio.png">
+                        <p>Powerful Listening Device listens for your 
+                            reminders that you want to remember Just tap 
+                            the button and help@Home Reminder device will 
+                            begin recording. </p>
+                    </li><br>
+                    <li>
+                        <img src="/icons/connect.png">
+                        <p>Your voice notes are converted to text using 
+                            our smart AI Technology. This text is then 
+                            wirelessly and automatically sent to our servers. </p>
+                    </li><br>
+                    <li>
+                        <img src="/icons/energy.png">
+                        <p>Your reminders can then be accessed at any time, any
+                            place from our website. If others need to see your 
+                            reminders they can simply log in also. </p>
+                    </li><br>
+                    <li>
+                        <img src="/icons/secure.png">
+                        <p>Your notes are kept safe and encrypted on
+                            our secure servers. On top of this, unlike
+                            other smart assistance, our product will only
+                            record audio when you press the record button. </p>
+                    </li><br>
+                    <li>
+                        <img src="/icons/tick.png">
+                        <p>The Help@Home Reminder system is quick and
+                            simple to setup and install making it perfect 
+                            for people of all demographics. </p>
+                    </li><br>
+                </ul>
+            </div>
         </div>
     </body>
     <script src="main.js"></script>
