--- a/Login.html
+++ b/Login.html
@@ -22,23 +22,28 @@
                         <a href="Index.html">Home</a>
                     </li>
                     <li>
+                        <a href="#">Products</a>
+                    </li>
+                    <li>
                         <a href="#">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
-        <div class="signin">
-            <form id="login-form">
-                Sign in to access your account
-                <br>
-                <br>
-                <label for="name">Account Name:</label>
-                <input type="text" id="username-field" name="username" class="login-form-field" placeholder="Username"><br><br>
-                <label for="password">Account Password:</label>
-                <input type="password" id="password-field" name="password" class="login-form-field" placeholder="Password"><br><br>
-                <input type="submit" value="Log In" id="login-form-submit">
-            </form>
+        <div class="dim">
+            <div class="signin">
+                <form id="login-form">
+                    Sign in to access your account
+                    <br>
+                    <br>
+                    <label for="name">Account Name:</label>
+                    <input type="text" id="username-field" name="username" class="login-form-field" placeholder="Username"><br><br>
+                    <label for="password">Account Password:</label>
+                    <input type="password" id="password-field" name="password" class="login-form-field" placeholder="Password"><br><br>
+                    <input type="button" value="Log In" id="login-form-submit">
+                </form>
+            </div>
         </div>
     </body>
     <script src="main.js"></script>
