--- a/About.html
+++ b/About.html
@@ -25,27 +25,26 @@
                         <a href="#">Products</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="Ab">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
         <div class="dim">
-            <div class="product">
-                <table id='reminder-table'>
-                    <h1>Reminders</h1><br><br>
-                    <tr>
-                        <th></th>
-                    </tr>
-                </table>
+            <div class="about">
+                <img src="">
+                <h2>About our company:</h2><br><br>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+                    cupidatat non proident, sunt in culpa qui officia deserunt 
+                    mollit anim id est laborum."</p>
             </div>
         </div>
-   
- 
     </body>
     <script src="main.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase.js"></script>
-    <script src="tabulatedFetch.js"></script>
 </html>
-
