--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                         <a href="#">Products</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="About.html">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
