--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'/>
         <meta name="viewport" content="width=device-width", initial-scale="1.0"/>
-        <title>Reminder Website ;)</title>
+        <title>Help@Home</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
@@ -33,11 +33,15 @@
         </div>
         <div class="dim">
             <div class="product">
-                <h1>Help@Home Reminders</h1><br>
-                <p>Introducing our newest ecosystem in the 
-                    Help@Home product range</p>
-                <p>Help@Home Reminders</p>
-                <p>Check it out at our product page now!</p><br>
+                <div class="titleCard">
+                    <h1>Help@Home Reminders</h1><br>
+                    <h2>The perfect cure to forgetfulness</h2>
+                    <p>Introducing our newest ecosystem in the 
+                        Help@Home product range</p>
+                    <p>Help@Home Reminders - Bringing Smart Asistance to every demographic</p>
+                    <p>Check it out at our product page now!</p>
+                    <p>Plans starting at just €60</p>
+                </div><br>
                     <li>
                         <img src="/icons/audio.png">
                         <p>Powerful Listening Device listens for your 
