--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'/>
         <meta name="viewport" content="width=device-width", initial-scale="1.0"/>
-        <title>Reminder Website ;)</title>
+        <title>Help@Home</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
@@ -34,15 +34,17 @@
         <div class="dim">
             <div class="about">
                 <img src="">
-                <h2>About our company:</h2><br><br>
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna 
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
-                    cupidatat non proident, sunt in culpa qui officia deserunt 
-                    mollit anim id est laborum."</p>
+                <h1>About our company:</h1><br><br>
+                <p>We are a Smart home company based in Ireland that is focused
+                    on giving our users the best poosible experience at a reasonable
+                    cost.
+                </p>
+                <br>
+                <p>
+                    We opened our doors in April 2018 and since then have become
+                    a go to for smart home technology that is trustworthy and available
+                    to all.
+                </p>
             </div>
         </div>
     </body>
