--- a/Data.html
+++ b/Data.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'/>
         <meta name="viewport" content="width=device-width", initial-scale="1.0"/>
-        <title>Reminder Website ;)</title>
+        <title>Help@Home</title>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
@@ -25,7 +25,7 @@
                         <a href="#">Products</a>
                     </li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="About.html">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
