--- a/Data.html
+++ b/Data.html
@@ -32,9 +32,9 @@
             </div>  
         </div>
         <div class="dim">
-            <div class="product">
+            <div class="data">
+                <h1>Reminders and Notes</h1><br><br>
                 <table id='reminder-table'>
-                    <h1>Reminders</h1><br><br>
                     <tr>
                         <th></th>
                     </tr>
