--- a/Login.html
+++ b/Login.html
@@ -33,8 +33,8 @@
         </div>
         <div class="dim">
             <div class="signin">
+                <h1>Sign in to access your account</h1><br><br>
                 <form id="login-form">
-                    Sign in to access your account
                     <br>
                     <br>
                     <label for="name">Account Name:</label>
