--- a/Products.html
+++ b/Products.html
@@ -25,28 +25,26 @@
                         <a href="Products.html">Products</a>
                     </li>
                     <li>
-                        <a href="Ab">About us</a>
+                        <a href="About.html">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
             </div>  
         </div>
         <div class="dim">
-            <div class="about">
-                <img src="">
-                <h1>About our company:</h1><br><br>
-                <p>We are a Smart home company based in Ireland that is focused
-                    on giving our users the best poosible experience at a reasonable
-                    cost.
-                </p>
-                <br>
-                <p>
-                    We opened our doors in April 2018 and since then have become
-                    a go to for smart home technology that is trustworthy and available
-                    to all.
-                </p>
+            <div class="productCard">
+                <h1>Help@Home Reminder Device</h1>
+                <h2>The perfect cure to forgetfulness</h2>
+                <p>Introducing our newest ecosystem in the 
+                    Help@Home product range</p>
+                <p>Help@Home Reminders - Bringing Smart Asistance to every demographic</p>
+                <a class="login" href="#">Buy Now</a>
             </div>
         </div>
+   
+ 
     </body>
     <script src="main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase.js"></script>
+    <script src="tabulatedFetch.js"></script>
 </html>
