--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,7 @@
                         <a href="Index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Products</a>
+                        <a href="Products.html">Products</a>
                     </li>
                     <li>
                         <a href="About.html">About us</a>
