--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
                         <a href="Products.html">Products</a>
                     </li>
                     <li>
-                        <a href="Ab">About us</a>
+                        <a href="About.html">About us</a>
                     </li>
                 </ul>
                 <a class="login" href="Login.html">Log In</a>
@@ -33,14 +33,11 @@
         </div>
         <div class="dim">
             <div class="about">
-                <img src="">
                 <h1>About our company:</h1><br><br>
                 <p>We are a Smart home company based in Ireland that is focused
                     on giving our users the best poosible experience at a reasonable
                     cost.
-                </p>
-                <br>
-                <p>
+                <br><br>
                     We opened our doors in April 2018 and since then have become
                     a go to for smart home technology that is trustworthy and available
                     to all.
